--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/home_css.css">
-    <title>Document</title>
+    <title>home 2021</title>
 </head>
 <body>
     
