--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="/static/home_css.css">
     <title>home 2021</title>
 </head>
-<body>
+<body> 
+    <div>
+        Login
+    </div>
     
 </body>
 </html>
