--- a/templates/register.html
+++ b/templates/register.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/register_login.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/static/register_login1.css">
+    <title>Register</title>
 </head>
 <body>
-    
+    <div class="box0"> 
+        <div class="for-box">
+            <div class="botto">   
+                <div class="botton01"> Register/สมัครสมาชิก</div>
+            </div>
+                <form class="input-g">
+                    <input type="text" class="input-field" placeholder="username" required>
+                    <input type="password" class="input-field" placeholder="Password" required>
+                    <input type="checkbox" class="check-b"><span>Remember Password</span>
+                    <button type="submit" class="submit-btn">Login</button>
+                    
+                </form>
+                <p class="p01">ฉันยังไม่ได้เป็นสมาชิก <a href="login.html"></a></p> 
+        </div>
+        
+    </div>
 </body>
 </html>
