--- a/static/home_css.css
+++ b/static/home_css.css
@@ -1,4 +1,127 @@
 * {
     padding: 0px;
     margin: 0px;
+    box-sizing: border-box;
+
+}
+* a{
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
+*li {
+    list-style: none;
+}
+
+.box {
+    width: 100%;
+    height: 70px;
+    background-color: rgb(37, 36, 37);
+    position: absolute;
+}
+
+.box-in {
+    width: 100%;
+    height: 70px;
+    background-color:rgb(37, 36, 37);
+    padding: 0;
+    margin: 0;
+    position: absolute;
+}
+
+.menu-x {
+     padding: 0 0 0 50px;
+}
+
+.col-menu {
+    width: 200px;
+    background-color: rgb(37, 36, 37);
+    padding: 0px 30px;
+    position: fixed;
+}
+
+.col-menu ul{
+    padding: 0;
+}
+
+.col-menu a{
+    display: block;
+    color: white;
+    padding: 10px;
+    
+}
+.col-menu a:hover {
+    color: rgb(37, 36, 37);
+}
+
+
+.col-menu label{
+    width: 90px;
+    color: rgb(255, 255, 255);
+    display: block;
+    font-size: 25px;
+    background: url(/static/streamline-icon-interface-setting-menu-1@48x48\ \(1\).svg)
+    no-repeat left center;
+    cursor: pointer;
+    padding: 22px 0 10px 50px;
+    background-size: 30px;
+}
+
+.col-menu li {
+    transition: 0.5s;
+    background-color: rgb(37, 36, 37);
+    list-style: none;
+    width: 100px;
+    height: 40px;
+}
+
+input#menu {
+    display: none;
+}
+
+input:checked + label {
+    background-image: url(/static/Xstreamline-icon-interface-arrows-button-to-bottom@48x48.svg);
+    background-size: 30px;
+}
+
+.menu-x {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0 0 0 0;
+    
+}
+
+input:checked ~ label {
+    background-image: url(/static/Xstreamline-icon-interface-arrows-button-to-bottom@48x48.svg);
+
+}
+
+input:checked ~ .menu-x {
+    max-height: 100%;
+}
+.p-in {
+    font-size: 22px;
+    color: rgb(250, 250, 250);
+    margin: 20px 0 100px 240px;
+    position: absolute;
+}
+
+.a-in{
+    width: 90px;
+    height: 100%;
+    color: white;
+    margin: 0px 0 0 1440px;
+    display: block;
+    border: solid 1px white;
+    text-align: center;
+}
+
+.a-inx {
+    font-size: 22px;
+    margin: 20px 0 0 0;
+    text-decoration: none;
+}
+
+.a-inx a {
+    color: white;
 }
