--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -5,9 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/bmi_css.css">
-    <title>Document</title>
+    <script type="text/javascript" src="/static/home_js.js" ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Hif_BMI</title>
 </head>
 <body>
+    <div class="box-in">
+        
+        <form class="box">
+        
+            <div class="col-menu">
+                <input type="checkbox" id="menu">
+                <label for="menu">MENU</label>
+                
+                <div class="menu-x">
+                    <ul>
+                        <li><a href="http://127.0.0.1:5000/">Home</a></li>
+                        <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
+                        <li><a href="http://127.0.0.1:5000/food">Food</a></li>
+                        <li><a href="http://127.0.0.1:5000/about">About</a></li>
+                        <li><a href="http://127.0.0.1:5000/help">Help</a></li>
+                    </ul>
+                </div>
     
+            </div> 
+            
+            <p class="p-in">START's BMI</p>
+            <div  class="a-in">
+                <div class="a-inx">
+                    <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
+                </div>
+                
+            </div>
+            
+         </form>
+         
+    </div>
+ 
+       
+    
+        
+                        
 </body>
 </html>
