--- a/templates/home.html
+++ b/templates/home.html
@@ -5,12 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/home_css.css">
-    <title>home 2021</title>
+    <script type="text/javascript" src="/static/home_js.js" ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Hif_Home</title>
 </head>
-<body> 
-    <div>
-        12122
-    </div>
+<body>
+    <div class="box-in">
+        
+        <form class="box">
+        
+            <div class="col-menu">
+                <input type="checkbox" id="menu">
+                <label for="menu">MENU</label>
+                
+                <div class="menu-x">
+                    <ul>
+                        <li><a href="http://127.0.0.1:5000/">Home</a></li>
+                        <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
+                        <li><a href="http://127.0.0.1:5000/food">Food</a></li>
+                        <li><a href="http://127.0.0.1:5000/about">About</a></li>
+                        <li><a href="http://127.0.0.1:5000/help">Help</a></li>
+                    </ul>
+                </div>
     
+            </div> 
+            
+            <p class="p-in">Let's me check your BODY 🤍</p>
+            <div  class="a-in">
+                <div class="a-inx">
+                    <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
+                </div>
+                
+            </div>
+            
+         </form>
+         
+    </div>
+ 
+       
+    
+        
+                        
 </body>
 </html>
