--- a/templates/hif_main.html
+++ b/templates/hif_main.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/static/home_css.css">
         <script type="text/javascript" src="/static/home_js.js" ></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>Hif_Home</title>
+        <title>Hif_maine</title>
     </head>
     <body>
         <div class="box-in">
@@ -30,7 +30,7 @@
         
                 </div> 
                 
-                <p class="p-in">Let's me check your BODY 🤍</p>
+                <p class="p-in">How are you darling 🤍</p>
                 <div  class="a-in">
                     <div class="a-inx">
                         <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
