--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -21,10 +21,10 @@
                 <div class="menu-x">
                     <ul>
                         <li><a href="http://127.0.0.1:5000/">Home</a></li>
-                        <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
-                        <li><a href="http://127.0.0.1:5000/food">Food</a></li>
-                        <li><a href="http://127.0.0.1:5000/about">About</a></li>
-                        <li><a href="http://127.0.0.1:5000/help">Help</a></li>
+                            <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
+                            <li><a href="http://127.0.0.1:5000/hif_main">Your Body</a></li>
+                            <li><a href="http://127.0.0.1:5000/about">About</a></li>
+                            <li><a href="http://127.0.0.1:5000/help">Help</a></li>
                     </ul>
                 </div>
     
