--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,22 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/register_login2.css">
+    <link rel="stylesheet" href="/static/css/login_css.css">
     <title>Login</title>
 </head>
+
+<!-- ผู้รับผิดชอบ BIG(วิชัย 64070203) ผู้ช่วย รัชชานนท์ กาทิพย์64070220 ผู้ช่วย ปราโมทย์ จันทโสก 64070180-->
+
+<!-- ทำหน้า login ยังทำไม่เสร็จ เหลือตรง form background ยังไม่ได้หารูป กับเปลี่ยน font ให้ส่วยงาม
+     มีปัญหาอะไรพิมพ์ลงกลุ่มเลยนะ   (BIG  FB : Wichai kommongkhun)  เวลาเขียนโค้ดใหม่หรือแก้โค้ดเขียน comment 
+    บอกเพื่อนทุกครั้งนะ ว่าทำอะ แก้ตรงไหน (เขียนชื่อ เเละช่องทางติดต่อส่วนตัวให้ด้วย)   -->
+
 <body>
     <div class="box0"> 
         <div class="for-box">
@@ -18,7 +28,7 @@
                     <input type="text" class="input-field" placeholder="username" required
                         maxlength="18" minlength="6">
                     <input type="password" class="input-field" placeholder="Password" required
-                        maxlength="18" minlength="6">
+                    maxlength="18" minlength="6">
                     
                     <input type="checkbox" class="check-b"><span>Remember Password</span>
                     <button type="submit" class="submit-btn">Login</button>
