--- a/static/css/login_css.css
+++ b/static/css/login_css.css
@@ -7,7 +7,7 @@
 .box0 {
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(../static/bg01.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(../img&icon/bg01.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
