--- a/templates/help.html
+++ b/templates/help.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help</title>
+    <link rel="stylesheet" href="/static/css/help_css.css">
+    <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="box-in">
+        <form class="box">
+            <div class="col-menu">
+                <input type="checkbox" id="menu">
+                <label for="menu">MENU</label>
+                <div class="menu-x">
+                    <ul>
+                        <li><a href="http://127.0.0.1:5000/">Home</a></li>
+                        <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
+                        <li><a href="http://127.0.0.1:5000/hif_main">Your Body</a></li>
+                        <li><a href="http://127.0.0.1:5000/about">About</a></li>
+                        <li><a href="http://127.0.0.1:5000/help">Help</a></li>
+                    </ul>
+                </div>
+            </div> 
+            <p class="p-in">Let's me check your BODY 🤍</p>
+            <div  class="a-in">
+                <div class="a-inx">
+                    <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
+                </div>
+            </div>
+        </form>
+    </div>
+
+        <!-- คนที่มาทำต่อเขียนโค้ดด้านล่างนี้เลยนะ ข้างบนถ้าจะเเก้อย่าลืมบันทึกโค้ดเก่าด้วย
+             มีปัญหาอะไรพิมพ์ลงกลุ่มเลยนะ   (BIG  FB : Wichai kommongkhun)  เวลาเขียนโค้ดใหม่หรือแก้โค้ดเขียน comment 
+             บอกเพื่อนทุกครั้งนะ ว่าทำอะ แก้ตรงไหน (เขียนชื่อ เเละช่องทางติดต่อส่วนตัวให้ด้วย)   -->
+
+
+
 </body>
 </html>
