--- a/templates/hif_main.html
+++ b/templates/hif_main.html
@@ -4,20 +4,21 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/static/home_css.css">
+        <link rel="stylesheet" href="/static/css/main_css.css">
         <script type="text/javascript" src="/static/home_js.js" ></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Hif_maine</title>
     </head>
+
+    <!--  ปราโมทย์ จันทโสก 64070180(H) ผู้ช่วย  รัชชานนท์ กาทิพย์64070220-->
+
+
     <body>
-        <div class="box-in">
-            
+        <div class="box-in">  
             <form class="box">
-            
                 <div class="col-menu">
                     <input type="checkbox" id="menu">
                     <label for="menu">MENU</label>
-                    
                     <div class="menu-x">
                         <ul>
                             <li><a href="http://127.0.0.1:5000/">Home</a></li>
@@ -27,19 +28,19 @@
                             <li><a href="http://127.0.0.1:5000/help">Help</a></li>
                         </ul>
                     </div>
-        
                 </div> 
-                
                 <p class="p-in">How are you darling 🤍</p>
                 <div  class="a-in">
                     <div class="a-inx">
                         <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
                     </div>
-                    
                 </div>
-                
             </form>
         </div>   
-              
+
+                <!-- คนที่มาทำต่อเขียนโค้ดด้านล่างนี้เลยนะ ข้างบนถ้าจะเเก้อย่าลืมบันทึกโค้ดเก่าด้วย
+                 มีปัญหาอะไรพิมพ์ลงกลุ่มเลยนะ   (BIG  FB : Wichai kommongkhun)  เวลาเขียนโค้ดใหม่หรือแก้โค้ดเขียน comment 
+                 บอกเพื่อนทุกครั้งนะ ว่าทำอะ แก้ตรงไหน (เขียนชื่อ เเละช่องทางติดต่อส่วนตัวให้ด้วย)   -->
+
     </body>
 </html>
