--- a/templates/register.html
+++ b/templates/register.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/register_login1.css">
+    <link rel="stylesheet" href="/static/css/register.css">
     <title>Register</title>
 </head>
+
+<!-- ผู้รับผิดชอบ BIG(วิชัย 64070203) ผู้ช่วย รัชชานนท์ กาทิพย์64070220 ผู้ช่วย ปราโมทย์ จันทโสก 64070180-->
+
+<!-- ทำหน้า register ยังทำไม่เสร็จ เหลือตรง form background ยังไม่ได้หารูป กับเปลี่ยน font ให้ส่วยงาม(bg-เดียวกับlogin)
+     มีปัญหาอะไรพิมพ์ลงกลุ่มเลยนะ   (BIG  FB : Wichai kommongkhun)  เวลาเขียนโค้ดใหม่หรือแก้โค้ดเขียน comment 
+    บอกเพื่อนทุกครั้งนะ ว่าทำอะ แก้ตรงไหน (เขียนชื่อ เเละช่องทางติดต่อส่วนตัวให้ด้วย)   -->
+
+
 <body>
     <div class="box0"> 
         <div class="for-box">
