--- a/templates/help.html
+++ b/templates/help.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/static/css/help_css.css">
     <title>Document</title>
 </head>
-
+    <!-- ผู้รับผิดชอบ: ปราโมทย์ จันทโสก 64070180(H) ผู้ช่วย ธนกร เผ่าพนัส 64070039(H)
+ -->
 <body>
     <div class="box-in">
         <form class="box">
