--- a/static/css/home_css.css
+++ b/static/css/home_css.css
@@ -51,7 +51,7 @@
     
 }
 .col-menu a:hover {
-    color: rgb(37, 36, 37);
+    color: rgb(144, 144, 144); /* ปรับสีเวลาตัว cursor ชี้ไปที่ปุ่ม */
 }
 
 
@@ -63,7 +63,7 @@
     background: url(../img&icon/streamline-icon-interface-setting-menu-1@48x48\ \(1\).svg)
     no-repeat left center;
     cursor: pointer;
-    padding: 22px 0 10px 50px;
+    padding: 22px 0 20px 50px; /* ปรับ balance */
     background-size: 30px;
 }
 
@@ -110,21 +110,73 @@ input:checked ~ .menu-x {
     width: 90px;
     height: 100%;
     color: white;
-    margin: 0px 0 0 1440px;
+    margin: 0 0 0 1640px; /* ปรับให้ชิดขวาหน่อย */
     display: block;
     border: solid 1px white;
     text-align: center;
+    border: none;
 }
 
 .a-inx {
     font-size: 22px;
-    margin: 20px 0 0 0;
+    margin: 25px 0 0 0;
     text-decoration: none;
 }
 
 .a-inx a {
     color: white;
 }
-
-
 /* คนที่มาทำต่อเขียน class ข้างล่างนี้เลยนะ ข้างบนถ้าจะแก้อย่าลืมเก็บโค้ดเก่าไว้ก่อนนะ (ฺBIG FB : Wichai kommongkhun)*/
+.main-content{
+    color: black;
+    position: absolute;
+    margin: 180px 0 0 690px;
+    padding: 20px;
+}
+
+.main-text{
+    font-size: 100px;
+    margin-left: 100px;
+    padding-bottom: 50px;
+}
+
+button{
+    padding: 20px 100px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    border: 0px;
+    background: transparent;
+    position: relative;
+    margin: 20px;
+    transition: all 0.25s ease;
+    display: block;
+}
+
+.new-btn{
+    color: #fff;
+    overflow: hidden;
+    border-radius: 30px;
+    box-shadow: 0px -0px 0px 0px rgba(143, 64, 248, 0.5),
+    0px 0px 0px 0px rgba(39, 200, 255, 0.5);
+}
+.new-btn:hover{
+    transform: translate(0, -6px);
+    box-shadow: 10px -10px 25px 0px rgba(143, 64, 248, 0.5),
+    -10px 10px 25px 0px rgba(39, 200, 255, 0.5);
+}
+.new-btn:hover::after{
+    transform: rotate(150deg);
+}
+.new-btn::after{
+    content: "";
+    width: 600px;
+    height: 600px;
+    position: absolute;
+    top: -100px;
+    left: -75px;
+    background-color: #ff3cac;
+    background-image: linear-gradient(225deg, #27d86c 0%,
+     #26caf8 50%, #c625d0 100%);
+    z-index: -1;
+    transition: all 0.25s ease;
+}
