--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
             <div class="main-content">
              <p class="main-text">TEXT</p>
             <button class="new-btn">START !! (Create NEW)</button>
-            <button class="new-btn">Continue (Record : BMI)</button>
+            <button class="new-btn"><a class="Continue-btn" href="http://127.0.0.1:5000/bmi">Continue (Record : BMI)</a><button>
             </div>
         </div>
     </body>
