--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/static/css/home_css.css">
         <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\hif_psit\static\css\home_css.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Hif_Home</title>
@@ -30,7 +31,7 @@
                 <p class="p-in">Let's me check your BODY 🤍</p>
                 <div  class="a-in">
                     <div class="a-inx">
-                        <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
+                        <a href="http://127.0.0.1:5000/user_account/user_account_login">LOGIN</a>
                     </div>
                 </div>
             </form>
@@ -44,7 +45,7 @@
             <div class="main-content">
              <p class="main-text">TEXT</p>
             <button class="new-btn">START !! (Create NEW)</button>
-            <button class="new-btn"><a class="Continue-btn" href="http://127.0.0.1:5000/bmi">Continue (Record : BMI)</a><button>
+            <button class="new-btn"><a class="Continue-btn" href="http://127.0.0.1:5000/bmi">Continue (Record : BMI)</a></button>
             </div>
         </div>
     </body>
