--- a/static/css/home_css.css
+++ b/static/css/home_css.css
@@ -156,13 +156,13 @@ button{
     color: #fff;
     overflow: hidden;
     border-radius: 30px;
-    box-shadow: 0px -0px 0px 0px rgba(143, 64, 248, 0.5),
-    0px 0px 0px 0px rgba(39, 200, 255, 0.5);
+    box-shadow: 0px -0px 0px 0px rgba(105, 105, 105, 0.5),
+    0px 0px 0px 0px rgba(184, 184, 184, 0.5);
 }
 .new-btn:hover{
     transform: translate(0, -6px);
-    box-shadow: 10px -10px 25px 0px rgba(143, 64, 248, 0.5),
-    -10px 10px 25px 0px rgba(39, 200, 255, 0.5);
+    box-shadow: 10px -10px 25px 0px rgba(105, 105, 105, 0.5),
+    -10px 10px 25px 0px rgba(184, 184, 184, 0.5);
 }
 .new-btn:hover::after{
     transform: rotate(150deg);
@@ -174,13 +174,9 @@ button{
     position: absolute;
     top: -100px;
     left: -75px;
-    background-color: #ff3cac;
-    background-image: linear-gradient(225deg, #27d86c 0%,
-     #26caf8 50%, #c625d0 100%);
+    background-color: #c0bcbc;
+    background-image: linear-gradient(225deg, #b9b9b9 0%,
+     #696969 50%, #8b8a8a 100%);
     z-index: -1;
     transition: all 0.25s ease;
-}
-
-.Continue-btn{
-    color: white;
 }
