--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
                 <p class="p-in">Let's me check your BODY 🤍</p>
                 <div  class="a-in">
                     <div class="a-inx">
-                        <a href="http://127.0.0.1:5000/user_account/user_account_login">LOGIN</a>
+                        <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
                     </div>
                 </div>
             </form>
@@ -43,13 +43,8 @@
          <div class="auto-margin">
             <div class="main-content">
              <p class="main-text">TEXT</p>
-<<<<<<< HEAD
             <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/bmi'">START !! (Create NEW)</button>
             <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/hif_main'">Continue (Record : BMI)<button>
-=======
-            <button class="new-btn">START !! (Create NEW)</button>
-            <button class="new-btn"><a class="Continue-btn" href="http://127.0.0.1:5000/bmi">Continue (Record : BMI)</a></button>
->>>>>>> cc320a0a6cfd443a6080745ef6d807d9dc97f8a5
             </div>
         </div>
     </body>
