--- a/templates/register.html
+++ b/templates/register.html
@@ -44,7 +44,7 @@
                     </div>
                     <button type="submit" class="submit-btn" value="register">สมัครสมาชิก</button>
                 </form>
-                <p class="p01">ฉันเป็นสมาชิกเเล้ว <a href="http://127.0.0.1:5000/user_account/user_account_login">Sing in/เข้าสู่ระบบ</a></p> 
+                <p class="p01">ฉันเป็นสมาชิกเเล้ว <a href="http://127.0.0.1:5000/user_account/user_account_login">Sign in/เข้าสู่ระบบ</a></p> 
         </div>
         
     </div>
