--- a/templates/home.html
+++ b/templates/home.html
@@ -4,16 +4,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\hif_psit\static\css\home_css.css">
+        <link rel="stylesheet" href="C:\Users\ratch\hif_psit\static\css\home_css.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Hif_Home</title>
     </head>
 
     <!-- หน้าhome ผู้รับผิดชอบ พงศ์พันธุ์ แสงพล 64070191(H) ผู้ช่วย รัชชานนท์ กาทิพย์64070220 -->
-
+    <!-- เราแก้พวกเวลาย่อหน้าจอแล้วมีให้เลื่อน ทำให้ไม่มีแล้วนะ -->
     <body>
+        <div class="backgroud"> <!-- อันนี้ใส่ไปก่อนนะ -->
         <div class="box-in">
             <form class="box">
+                <div class="bug">
                 <div class="col-menu">
                     <input type="checkbox" id="menu">
                     <label for="menu">MENU</label>
@@ -26,6 +28,7 @@
                             <li><a href="http://127.0.0.1:5000/help">Help</a></li>
                         </ul>
                     </div>
+                </div>
                 </div> 
                 <p class="p-in">Let's me check your BODY 🤍</p>
                 <div  class="a-in">
