--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
     </head>
 
     <!-- หน้าhome ผู้รับผิดชอบ พงศ์พันธุ์ แสงพล 64070191(H) ผู้ช่วย รัชชานนท์ กาทิพย์64070220 -->
+    <!-- แก้บัคเวลาย่อหน้าจอแล้วนะ -->
 
     <body>
         <div class="backgroud">
