--- a/templates/login.html
+++ b/templates/login.html
@@ -27,16 +27,18 @@
                 <form class="input-g" action="{{ url_for('login') }}" method="post">
 
                     <input type="text" class="input-field" placeholder="username" required
-                        maxlength="18" minlength="6" id="user">
+                        maxlength="18" minlength="6" id="username" name="username">
+
+
                     <input type="password" class="input-field" placeholder="Password" required
-                    maxlength="18" minlength="6" id="password">
+                    maxlength="18" minlength="6" id="password" name="password">
                     
                     <input type="checkbox" class="check-b"><span>Remember Password</span>
                     <button type="submit" class="submit-btn" value="login">Login</button>
                     
                 </form>
-                <p class="p01">ฉันยังไม่ได้เป็นสมาชิก <a href="http://127.0.0.1:5000/user_account/user_account_register">Sing up</a></p>
-                <p class="p01">{{worng}} </p>
+                <p class="p01">ฉันยังไม่ได้เป็นสมาชิก <a href="http://127.0.0.1:5000/user_account/user_account_register">Sign up</a></p>
+                
         </div>
         
     </div>
