--- a/templates/home.html
+++ b/templates/home.html
@@ -10,10 +10,13 @@
     </head>
 
     <!-- หน้าhome ผู้รับผิดชอบ พงศ์พันธุ์ แสงพล 64070191(H) ผู้ช่วย รัชชานนท์ กาทิพย์64070220 -->
+    <!-- แก้บัคเวลาย่อหน้าจอแล้วนะ -->
 
     <body>
+        <div class="backgroud">
         <div class="box-in">
             <form class="box">
+                <div class="bug">
                 <div class="col-menu">
                     <input type="checkbox" id="menu">
                     <label for="menu">MENU</label>
@@ -26,6 +29,7 @@
                             <li><a href="http://127.0.0.1:5000/help">Help</a></li>
                         </ul>
                     </div>
+                </div>
                 </div> 
                 <p class="p-in">Let's me check your BODY 🤍</p>
                 <div  class="a-in">
