--- a/static/css/main_css.css
+++ b/static/css/main_css.css
@@ -37,7 +37,7 @@
     width: 200px;
     background-color: rgb(37, 36, 37);
     padding: 0px 30px;
-    position: fixed;
+    position: absolute;
 }
 
 .col-menu ul{
@@ -110,7 +110,7 @@ input:checked ~ .menu-x {
     width: 90px;
     height: 100%;
     color: white;
-    margin: 0px 0 0 1440px;
+    margin: 0px 0 0 1760px;
     display: block;
     border: solid 1px white;
     text-align: center;
