--- a/static/css/home_css.css
+++ b/static/css/home_css.css
@@ -43,6 +43,7 @@
 .col-menu {
     background-color: rgba(37, 36, 37, 0.1);
     position: fixed;
+    cursor: pointer;
 }
 
 .col-menu ul{
@@ -61,7 +62,8 @@
     display: block;
     color: white;
     padding: 10px;
-    
+    position: absolute;
+    padding: 80px 25px 80px 25px;
 }
 .col-menu a:hover {
     color: rgb(144, 144, 144); /* ปรับสีเวลาตัว cursor ชี้ไปที่ปุ่ม */
@@ -196,9 +198,9 @@ button{
     position: absolute;
     top: -100px;
     left: -75px;
-    background-color: #c0bcbc;
-    background-image: linear-gradient(225deg, #b9b9b9 0%,
-     #696969 50%, #8b8a8a 100%);
+    background-color: #696565;
+    background-image: linear-gradient(225deg, #aaa8a8 0%,
+    #555454 50%, #7a7a7a 100%);
     z-index: -1;
     transition: all 0.25s ease;
 }
