--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
          <div class="auto-margin">
             <div class="main-content">
              <p class="main-text">Welcome</p>
-                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/bmi'">START !! (Create NEW)</button>
+                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/bmi'">Start !! (Create New)</button>
                 <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/hif_main'">Continue (Record : BMI)<button>
             </div>
         </div>
