--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -40,7 +40,32 @@
         <!-- คนที่มาทำต่อเขียนโค้ดด้านล่างนี้เลยนะ ข้างบนถ้าจะเเก้อย่าลืมบันทึกโค้ดเก่าด้วย
                  มีปัญหาอะไรพิมพ์ลงกลุ่มเลยนะ   (BIG  FB : Wichai kommongkhun)  เวลาเขียนโค้ดใหม่หรือแก้โค้ดเขียน comment 
                  บอกเพื่อนทุกครั้งนะ ว่าทำอะ แก้ตรงไหน (เขียนชื่อ เเละช่องทางติดต่อส่วนตัวให้ด้วย)   -->
-       
+        
+        <div class="form-bg">
+            <form class="input-form">
+                <input type="text" name="weigth" class="input1">
+                <input type="text" name="height" class="input2">
+                <button type="submit" name="go" class="btn-go">GO....</button>
+            </form>
+            
+            <div class="box-body">
+                
+                <div class="box-weigth">
+                    <p class="p-box">Weight น้ำหนัก</p>
+                </div>
+                <div class="box-weigth">
+                    <p class="p-box">Height ส่วนสูง</p>
+                </div>
+            </div>
+            <div class="note-box">
+                <div class="">
+
+                </div>
+            </div>
+        </div>
+
+            
+
     
         
                         
