--- a/static/css/bmi_css.css
+++ b/static/css/bmi_css.css
@@ -128,3 +128,75 @@ input:checked ~ .menu-x {
 
 
 /* คนที่มาทำต่อเขียน class ข้างล่างนี้เลยนะ ข้างบนถ้าจะแก้อย่าลืมเก็บโค้ดเก่าไว้ก่อนนะ (ฺBIG FB : Wichai kommongkhun)*/
+
+.form-bg {
+    width: 100%;
+    height: 937px;
+    background-color: rgb(214, 214, 214);
+}
+
+.box-body {
+    width: 200px;
+    height: 370px;
+
+    margin: 380px 0 0 50%;
+    position: absolute;
+    
+}
+
+.box-weigth {
+    width: 175px;
+    height: 120px;
+    border-right: 3px solid black;
+    border-left: 3px solid black;
+    margin-bottom: 60px;
+}
+
+.p-box {
+    font-size: 48px;
+    color: black;
+    text-align: center;
+}
+
+
+.input-form {
+    width: 300px;
+    height: 320px;
+    position: absolute;
+    margin:410px 0 0 64%;
+    
+}
+
+.input-form input {
+    width: 350px;
+    height: 60px;
+    font-size: 28px;
+    border-bottom: 3px solid black; 
+    border-top:  none;
+    border-left: none;
+    border-right: none;
+    background-color: rgb(214, 214, 214);
+}
+.input1 {
+    margin: 0 0 15px 0;
+}
+
+.input2 {
+    margin: 120px 0 15px 0;
+}
+.btn-go {
+    width: 140px;
+    height: 60px;
+    font-size: 30px;
+    cursor: pointer;
+    border-radius: 24%;
+    margin: 30px 0 0 120px;
+}
+
+.note-box {
+    width: 400px;
+    height: 670px;
+    margin: 170px 0 0 22%;
+    background-color: rgb(195, 62, 0);
+    position: absolute;
+}
