--- a/static/css/home_css.css
+++ b/static/css/home_css.css
@@ -175,38 +175,47 @@ button{
     display: block;
 }
 .new-btn{
-    color: #fff;
+    color: rgb(0, 0, 0);
     overflow: hidden;
     border-radius: 30px;
     box-shadow: 0px -0px 0px 0px rgba(105, 105, 105, 0.5),
-    0px 0px 0px 0px rgba(184, 184, 184, 0.5);
+    0px 0px 0px 0px rgba(144, 144, 144, 0.5);
+    justify-content: center;
+    align-items: center;
 }
 .new-btn:hover{
     transform: translate(0, -6px);
-    box-shadow: 10px -10px 25px 0px rgba(105, 105, 105, 0.5),
-    -10px 10px 25px 0px rgba(184, 184, 184, 0.5);
+    box-shadow: 10px -10px 25px 0px rgba(98, 98, 98, 0.5),
+    -10px 10px 25px 0px rgba(75, 75, 75, 0.5);
 }
 .new-btn:hover::after{
     transform: rotate(150deg);
 }
 .new-btn::after{
     content: "";
-    width: 600px;
-    height: 600px;
+    width: 650px;
+    height: 650px;
     position: absolute;
     top: -100px;
     left: -75px;
-    background-color: #696565;
-    background-image: linear-gradient(225deg, #aaa8a8 0%,
-    #555454 50%, #7a7a7a 100%);
+    background-color: #eeeeee;
+    background-image: linear-gradient(225deg, #ffffff 0%,
+    #c9c8c8 50%, #f5f5f5 100%);
     z-index: -1;
     transition: all 0.25s ease;
 }
 
+.img{
+    padding: 0 0 0 20px;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+}
+
 body{
-    background-color: #ffffff;
-    background-image: url('https://i.ytimg.com/vi/R9mXtzn8meE/maxresdefault.jpg');
+    background-color: #666666;
+    background-image: url('https://ae01.alicdn.com/kf/HTB1FoGFMgHqK1RjSZFEq6AGMXXaO/Backdrop-Baby-Hintergrund-Fantasy-Gray-Photoshoot-Background-T20190314.jpg');
+    background-position: center top;
     background-size: cover;
-    background-attachment: fixed;
     background-repeat: no-repeat;
 }
