--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\hif_psit\static\css\home_css.css">
+        <link rel="stylesheet" href="/static/css/home_css.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Hif_Home</title>
     </head>
@@ -47,8 +47,8 @@
          <div class="auto-margin">
             <div class="main-content">
              <p class="main-text">Welcome</p>
-                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/bmi'">Start (Create New)  <img class="image" src="C:\Users\User\Documents\GitHub\hif_psit\static\img&icon\icon_btn.png")> </button>
-                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/hif_main'">Continue (Record : BMI)  <img class="image" src="C:\Users\User\Documents\GitHub\hif_psit\static\img&icon\icon_btn2.png")> <button>
+                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/bmi'">Start (Create New)  <img class="image" src="..\static\img&icon\icon_btn.png")></button>
+                <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/hif_main'">Continue (Record : BMI)  <img class="image" src="..\static\img&icon\icon_btn2.png")></button>
             </div>
         </div>
     </body>
