--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -13,29 +13,31 @@
     <!--  วิชัย คำมงคุณ 64070230(H) ผู้ช่วย  ปราโมทย์ จันทโสก 64070180-->
 
 <body>
-    <div class="box-in">
-        <form class="box">
-            <div class="col-menu">
-                <input type="checkbox" id="menu">
-                <label for="menu">MENU</label>
-                <div class="menu-x">
-                    <ul>
-                        <li><a href="http://127.0.0.1:5000/">Home</a></li>
-                            <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
-                            <li><a href="http://127.0.0.1:5000/hif_main">Your Body</a></li>
-                            <li><a href="http://127.0.0.1:5000/about">About</a></li>
-                            <li><a href="http://127.0.0.1:5000/help">Help</a></li>
-                    </ul>
+    <div class="backgroud">
+        <div class="box-in">
+            <form class="box">
+                <div class="col-menu">
+                    <input type="checkbox" id="menu">
+                    <label for="menu">MENU</label>
+                    <div class="menu-x">
+                        <ul>
+                            <li><a href="http://127.0.0.1:5000/">Home</a></li>
+                                <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
+                                <li><a href="http://127.0.0.1:5000/hif_main">Your Body</a></li>
+                                <li><a href="http://127.0.0.1:5000/about">About</a></li>
+                                <li><a href="http://127.0.0.1:5000/help">Help</a></li>
+                        </ul>
+                    </div>
+                </div> 
+                <p class="p-in">START's BMI</p>
+                <div  class="a-in">
+                    <div class="a-inx">
+                        <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
+                    </div>
                 </div>
-            </div> 
-            <p class="p-in">START's BMI</p>
-            <div  class="a-in">
-                <div class="a-inx">
-                    <a href="http://127.0.0.1:5000/user_account_login">LOGIN</a>
-                </div>
-            </div>
-         </form>
-    </div>
+            </form>
+        </div>
+    
  
         <!-- คนที่มาทำต่อเขียนโค้ดด้านล่างนี้เลยนะ ข้างบนถ้าจะเเก้อย่าลืมบันทึกโค้ดเก่าด้วย
                  มีปัญหาอะไรพิมพ์ลงกลุ่มเลยนะ   (BIG  FB : Wichai kommongkhun)  เวลาเขียนโค้ดใหม่หรือแก้โค้ดเขียน comment 
@@ -58,12 +60,12 @@
                 </div>
             </div>
             <div class="note-box">
-                <div class="">
-
+                <div class="nav-note">
+                    <p>MY BMI</p>
                 </div>
             </div>
         </div>
-
+    </div>
             
 
     
