--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -45,8 +45,8 @@
         
         <div class="form-bg">
             <form class="input-form">
-                <input type="text" name="weigth" class="input1">
-                <input type="text" name="height" class="input2">
+                <input type="text" name="weigth" class="input1" placeholder="น้ำหนัก (กิโลกรัม)">
+                <input type="text" name="height" class="input2" placeholder="ส่วนสูง (เซนติเมตร)">
                 <button type="submit" name="go" class="btn-go">GO....</button>
             </form>
             
@@ -61,7 +61,7 @@
             </div>
             <div class="note-box">
                 <div class="nav-note">
-                    <p>MY BMI</p>
+                    <p class="nav-p">MY BMI</p>
                 </div>
             </div>
         </div>
