--- a/templates/register.html
+++ b/templates/register.html
@@ -33,7 +33,7 @@
                         maxlength="18" minlength="6" name="password" id="password"> 
                     </div>
                     <div class="regis-box">
-                        <label for="pasword">Password agian/รหัสผ่านอีกครั้ง</label>
+                        <label for="pasword">Password/รหัสผ่านอีกครั้ง</label>
                         <input type="password" class="input-field" placeholder="ตัวอักษรเเละตัวเลข 6-18ตัว" required
                         maxlength="18" minlength="6">
                     </div>
