--- a/static/css/about_css.css
+++ b/static/css/about_css.css
@@ -20,113 +20,117 @@
     position: absolute;
 }
 
-.box-in {
-    width: 100%;
-    height: 70px;
-    background-color:rgb(37, 36, 37);
-    padding: 0;
-    margin: 0;
-    position: absolute;
-}
-
 .menu-x {
-     padding: 0 0 0 50px;
+    padding: 0 0 0 50px;
 }
 
 .col-menu {
-    width: 200px;
-    background-color: rgb(37, 36, 37);
-    padding: 0px 30px;
-    position: absolute;
+   background-color: rgba(37, 36, 37, 0.1);
+   position: absolute;
+   cursor: pointer;
 }
 
 .col-menu ul{
-    padding: 0;
+   padding: 0;
+   height: calc(100vh - 70px);
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}   
+*{
+   box-sizing: border-box;
 }
-
 .col-menu a{
-    display: block;
-    color: white;
-    padding: 10px;
-    
+   display: block;
+   color: rgb(255, 255, 255);
+   padding: 10px;
 }
 .col-menu a:hover {
-    color: rgb(37, 36, 37);
+   color: rgb(144, 144, 144); /* ปรับสีเวลาตัว cursor ชี้ไปที่ปุ่ม */
 }
 
 
 .col-menu label{
-    width: 90px;
-    color: rgb(255, 255, 255);
-    display: block;
-    font-size: 25px;
-    background: url(../img&icon/streamline-icon-interface-setting-menu-1@48x48\ \(1\).svg)
-    no-repeat left center;
-    cursor: pointer;
-    padding: 22px 0 10px 50px;
-    background-size: 30px;
+   width: 90px;
+   color: rgb(255, 255, 255);
+   display: block;
+   font-size: 25px;
+   background: url(../img&icon/streamline-icon-interface-setting-menu-1@48x48\ \(1\).svg)
+   no-repeat left center;
+   cursor: pointer;
+   padding: 22px 0 20px 50px; /* ปรับ balance */
+   background-size: 30px;
 }
 
 .col-menu li {
-    transition: 0.5s;
-    background-color: rgb(37, 36, 37);
-    list-style: none;
-    width: 100px;
-    height: 40px;
+   transition: 0.5s;
+   background-color: rgba(37, 36, 37, 0.5);
+   list-style: none;
+   width: 100%;
+   height: 100vh;
+   text-align: center;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+}
+.col-menu li:hover{
+   background-color: rgba(255,255,255,0.25);
 }
 
 input#menu {
-    display: none;
+   display: none;
 }
 
 input:checked + label {
-    background-image: url(../img&icon/Xstreamline-icon-interface-arrows-button-to-bottom@48x48.svg);
-    background-size: 30px;
+   background-image: url(../img&icon/Xstreamline-icon-interface-arrows-button-to-bottom@48x48.svg);
+   background-size: 30px;
 }
 
 .menu-x {
-    max-height: 0;
-    overflow: hidden;
-    padding: 0 0 0 0;
-    
+   max-height: 0;
+   overflow: hidden;
+   padding: 0 0 0 0;
+   
 }
 
 input:checked ~ label {
-    background-image: url(../img&icon/Xstreamline-icon-interface-arrows-button-to-bottom@48x48.svg);
+   background-image: url(../img&icon/Xstreamline-icon-interface-arrows-button-to-bottom@48x48.svg);
 
 }
 
 input:checked ~ .menu-x {
-    max-height: 100%;
+   max-height: 100%;
 }
 .p-in {
-    font-size: 22px;
-    color: rgb(250, 250, 250);
-    margin: 20px 0 100px 240px;
-    position: absolute;
+   font-size: 22px;
+   color: rgb(250, 250, 250);
+   margin: 20px 0 100px 240px;
+   position: absolute;
 }
 
 .a-in{
-    width: 100%;
-    height: 100%;
-    color: white;
-    display: block;
-    border: solid 2px white;
-    text-align: center;
-    border: none;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 30px;
+   width: 100%;
+   height: 100%;
+   color: white;
+   display: block;
+   border: solid 2px white;
+   text-align: center;
+   border: none;
+   display: flex;
+   justify-content: flex-end;
+   padding-right: 30px;
 }
 
 .a-inx {
-    font-size: 22px;
-    margin: 20px 0 0 0;
-    text-decoration: none;
+   font-size: 22px;
+   margin: 25px 0 0 0;
+   text-decoration: none;
 }
 
 .a-inx a {
-    color: white;
+   color: white;
 }
 
 
